--- a/style.css
+++ b/style.css
@@ -29,6 +29,13 @@
     justify-content: center;
     background-image: repeating-linear-gradient(rgb(0, 255, 255), rgb(78, 10, 75));
   }
+.wod{
+    padding:14px 9px;
+  }
+.btn{
+    padding:14px 9px;
+}
+
   
   .search-field {
     width: 520px;
